<resources>
    <string name="app_name">Hello World</string>
    <string name="nuevaSesion">Nueva sesión</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="escritura">Escriba aquí</string>
    <string name="atras">Atras</string>
    <string name="crearCuenta">Nueva sesión</string>
    <string name="cuenta">Mail</string>
    <string name="nuevoUsuario">Nombre</string>
    <string name="crear">Crear</string>
    <string name="busqueda">Busque el producto</string>
    <string name="menu">Menú</string>
    <string name="destacados">Destacados</string>
    <string name="configurations">Configuración</string>
    <string name="cambiarCuenta">Cambiar de cuenta</string>
    <string name="cuentaNueva">Crear una cuenta nueva</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="precio">Precio:</string>
    <string name="nombreProducto">Producto:</string>
    <string name="cantidad">Cantidad</string>
    <string name="agregarAlCarrito">Agregar al carrito de compras</string>
    <string name="carritoDeCompras">Carrito de compras</string>
    <string name="comprar">Comprar</string>
    <string name="title_activity_maps">Map</string>
    <string name="Carnes">Carnes</string>
    <string name="Dulcesyotros">Dulces y otros</string>
    <string name="pago">Pago</string>
    <string name="precioTotal">Precio Total:</string>
    <string name="factura">Ingrese sus datos para la factura:</string>
    <string name="nit">NIT:</string>
    <string name="nombreNit">Nombre:</string>
    <string name="cash">El pago será realizado en efectivo</string>
    <string name="fastAndEasy">Fast &amp; Easy</string>
    <string name="bebidas">Bebidas</string>
    <string name="realizar">Realizar</string>
    <string name="ubicacion">Ubicación</string>
    <string name="ingreseUbicacion">Por favor ingrese la ubicación de destino de los productos</string>
    <string name="ingresarUbicacion">Ingresar Ubicación</string>
    <string name="compraExitosa">Compra Exitosa</string>
    <string name="irMenuPrincipal">Ir al menú principal</string>
    <string name="proceso">En proceso...</string>
    <string name="ArticulosdelHogar">Articulos del Hogar</string>
    <string name="Lacteos">Productos Lacteos</string>
    <string name="salir">Salir</string>

</resources>
