<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarritoDeComprasActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorWhite"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/goBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/back_arrow"
                android:tint="@color/colorBlue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue"
                android:layout_marginLeft="110dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:text="@string/pago" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="17dp"
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="@dimen/margin_small"
            android:text="@string/cash"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:textSize="23dp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:text="@string/precioTotal"/>

            <TextView
                android:id="@+id/precioTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:textSize="22dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:textSize="20dp"
                android:text="Bs."/>

        </LinearLayout>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="23dp"
            android:textColor="@color/colorBlack"
            android:text="@string/factura"/>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="@dimen/margin_small"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:text="@string/nit"/>

        <EditText
            android:id="@+id/nit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/escritura"
            android:inputType="number"
            android:layout_marginLeft="45dp" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="20dp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:text="@string/nombreNit"/>

            <EditText
                android:id="@+id/nombreNit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/escritura"
                android:inputType="text"
                android:layout_marginLeft="20dp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/realizar"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="270dp"
        android:background="@drawable/bkg_ground"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/realizar"/>

</FrameLayout>