<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/back_arrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="30dp"
            android:textStyle="bold"
            android:text="@string/configurations"/>

        <Button
            android:id="@+id/cambiarCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/bkg_button_config"
            android:gravity=""
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/cambiarCuenta"/>

        <Button
            android:id="@+id/cuentaNueva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/bkg_button_config"
            android:gravity=""
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/cuentaNueva"/>

        <Button
            android:id="@+id/cerrarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/bkg_button_config"
            android:gravity=""
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/cerrarSesion"/>

    </LinearLayout>
</FrameLayout>