<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo"/>

    <Switch
        android:id="@+id/switchAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightRed"
        android:checked="true"
        android:enabled="true"
        android:padding="10dp"
        android:text="Modo Administrador" />

    <Button
        android:id="@+id/newSesion"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bkg_ground"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="45dp"
        android:layout_gravity="top|end"
        android:text="@string/nuevaSesion"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginEnd="@dimen/margin_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="50dp"
        android:paddingEnd="50dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fastAndEasy"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciarSesion"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:hint="@string/escritura"
                android:inputType="text"
                android:layout_marginLeft="@dimen/margin_small" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/contraseña"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/escritura"
                android:imeOptions="actionSearch"
                android:inputType="textPassword"  />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/ingresar"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bkg_ground"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />
        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="55dp"
            android:text="recordar contraseña"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:indeterminate="true"
            android:visibility="invisible"
            tools:visibility="visible"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>
</FrameLayout>





