<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/fastAndEasy"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:src="@drawable/home"/>

            <Button
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textStyle="italic"
                android:textSize="20dp"
                android:text="@string/ArticulosdelHogar"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:src="@drawable/milk"/>

            <Button
                android:id="@+id/milk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textStyle="italic"
                android:textSize="20dp"
                android:text="@string/Lacteos"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:src="@drawable/meat"/>

            <Button
                android:id="@+id/meat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textStyle="italic"
                android:textSize="20dp"
                android:text="@string/Carnes"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:src="@drawable/drinks"/>

            <Button
                android:id="@+id/bebidas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textStyle="italic"
                android:textSize="20dp"
                android:text="@string/bebidas"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:src="@drawable/candy"/>

            <Button
                android:id="@+id/dulces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textStyle="italic"
                android:textSize="20dp"
                android:text="@string/Dulcesyotros"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:src="@drawable/settings"/>

            <Button
                android:id="@+id/configuracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textStyle="italic"
                android:textSize="20dp"
                android:text="@string/configurations"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:src="@drawable/shopping_cart"/>

            <Button
                android:id="@+id/carrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textStyle="italic"
                android:textSize="20dp"
                android:text="@string/carritoDeCompras"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:src="@drawable/exit"/>

            <Button
                android:id="@+id/salir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textStyle="italic"
                android:textSize="20dp"
                android:text="@string/salir"/>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>