<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarritoDeComprasActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorWhite"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/goBack2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/back_arrow"
                android:tint="@color/colorBlue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue"
                android:layout_marginLeft="90dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:text="@string/ubicacion" />

        </LinearLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="130dp"
            android:layout_gravity="center"
            android:src="@drawable/marker"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorBlack"
            android:textStyle="italic"
            android:textSize="24dp"
            android:text="@string/ingreseUbicacion"/>

    </LinearLayout>

    <Button
        android:id="@+id/ingresarUbicacion"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="270dp"
        android:background="@drawable/bkg_ground"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/ingresarUbicacion"/>

</FrameLayout>